--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,34 @@
-body {
+body{
+  font-family: 'Astloch', cursive;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  background: linear-gradient(to left, #333, #333 50%, #eee 75%, #333 75%);
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+#root{
+  background-color: grey;
+  height: 500px;
+  border-radius: 50%;
+  width: 500px;
+  margin-top: 10%;
+  margin-left: 30%;
+  border-style: groove;
+  box-shadow: 5px 10px;
+}
+.main-text{
+  margin: 0;
+  margin-left: 22%;
+  margin-top: 26%;
+  font-size: 37px;
+}
+h1{
+  margin: 0;
+  padding-left: 28%;
+  /* padding-top: 40%; */
+  font-size: 76px;
+  text-shadow: 2px 2px #FF0000;
+}
+.slogan{
+  font-family: 'Spartan', sans-serif;
+}
+.spch{
+  font-size: 40px;
 }
